--- a/admin/index.phtml
+++ b/admin/index.phtml
@@ -32,21 +32,22 @@
                   </h4>
                 </div>
               </div>
-              <div class="card-body">
+              <div class="card-body form-container">
                 <form role="form" method="POST" class="text-start">
                   <?php if ($connexion_error == 1) { ?>
                     <div class="alert alert-danger" role="alert">
                       Admin Ou Mot De Passe Incorect !! Veuiller rééssayer !!!
                     </div>
                   <?php } ?>
-                  <div class="input-group input-group-outline my-3">
-                    <label class="form-label">Email</label>
+                  <div class="form-group input-group input-group-outline my-3">
                     <input type="email" name="email" id="email" class="form-control" />
+                    <label class="form-label" for="email">Email</label>
                   </div>
-                  <div class="input-group input-group-outline mb-3">
-                    <label class="form-label">Mot de passe</label>
+                  <div class="form-group input-group input-group-outline mb-3">
                     <input type="password" name="password" id="password" class="form-control" />
+                    <label class="form-label" for="password">Mot de passe</label>
                   </div>
+
                   <div class="form-check form-switch d-flex align-items-center mb-3">
                     <input class="form-check-input" type="checkbox" id="chkPasswordVisible" />
                     <label class="form-check-label mb-0 ms-3" for="passwordVisible" id="lblPasswordVisible">Afficher le mot de passe</label>
