Modification de la création du parent avec envoie automatique du MDP. Ajout de la fonctionnalité mot de passe oublié sur la partie admin

--- a/admin/remember_password.phtml
+++ b/admin/remember_password.phtml
@@ -1,11 +1,3 @@
-<?php
-// Récupérer la valeur de la variable change_password depuis la session
-$change_password = isset($_SESSION['change_password']) ? $_SESSION['change_password'] : 0;
-// Une fois utilisée, vous pouvez détruire la session pour éviter qu'elle ne persiste
-unset($_SESSION['change_password']);
-var_dump($_SESSION)
-?>
-
 <!DOCTYPE html>
 <html lang="fr">
 
@@ -36,7 +28,7 @@ var_dump($_SESSION)
               <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                 <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
                   <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
-                    Connexion
+                    récupération de mot de passe
                   </h4>
                 </div>
               </div>
@@ -44,36 +36,16 @@ var_dump($_SESSION)
                 <form role="form" method="POST" class="text-start">
                   <?php if ($connexion_error == 1) { ?>
                     <div class="alert alert-danger" role="alert">
-                      Admin Ou Mot De Passe Incorect !! Veuiller rééssayer !!!
-                    </div>
-                  <?php }
-                  if ($change_password == 1) { ?>
-                    <div id="message" class="alert alert-success d-none" role="alert">
-                      Le nouveau mot de passe a été envoyé. Veuillez vérifier votre boîte mail.
+                      Email introuvable !!!
                     </div>
                   <?php } ?>
                   <div class="form-group input-group input-group-outline my-3">
                     <input type="email" name="email" id="email" class="form-control" />
                     <label class="form-label" for="email">Email</label>
                   </div>
-                  <div class="form-group input-group input-group-outline mb-3">
-                    <input type="password" name="password" id="password" class="form-control" />
-                    <label class="form-label" for="password">Mot de passe</label>
-                  </div>
-                  <div class="form-check form-switch d-flex align-items-center mb-3">
-                    <input class="form-check-input" type="checkbox" id="chkPasswordVisible" />
-                    <label class="form-check-label mb-0 ms-3" for="passwordVisible" id="lblPasswordVisible">Afficher le mot de passe</label>
-                  </div>
-                  <div class="form-check form-switch d-flex align-items-center mb-3">
-                    <input class="form-check-input" type="checkbox" id="rememberMe" />
-                    <label class="form-check-label mb-0 ms-3" for="rememberMe" id="lbpRememberMe">Se souvenir de moi</label>
-                  </div>
-                  <div class="form-check form-switch d-flex align-items-center mb-3">
-                    <a href="remember_password.php"><label class="form-check-label mb-0 ms-3" for="rememberPassword" id="lbpRememberPassword">Mot de passe oublié</label></a>
-                  </div>
                   <div class="text-center">
                     <button name="login" id="login" type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">
-                      Connexion
+                      Envoie du mot de passe
                     </button>
                   </div>
                 </form>
@@ -103,6 +75,7 @@ var_dump($_SESSION)
   <!-- <script src="../js/bootstrap.bundle.min.js"></script> -->
   <script src="../js/jquery.min.js"></script>
   <script src="./assets/js/index.js"></script>
+
 </body>
 
 </html>
